--- a/Counter App/index.css
+++ b/Counter App/index.css
@@ -8,13 +8,21 @@ body {
     color: white;
 }
 
+
+h1,
+h2{
+    color: rgb(255, 255, 255);
+    text-shadow: 2px 2px 2px black;
+}
+
 h1 {
     margin-top: 10px;
     margin-bottom: 10px;
+    font-size: 100px;
 }
 
 h2 {
-    font-size: 50px;
+    font-size: 100px;
     margin-top: 0;
     margin-bottom: 20px;
 }
