--- a/Tindog/Css/index.css
+++ b/Tindog/Css/index.css
@@ -51,18 +51,27 @@ header img{
 
 #mainContentContainer{
     height: 75vh;
+    width: 97%;
     background-color: #404040;
     background-size: cover;
+    object-fit: contain;
     border-radius: 10px;
-    width: 97%;
     margin: 0 auto;
     padding: 10px 20px;
     display: flex;
     justify-content: flex-start;
     align-items: flex-end;
 }
+#badge{
+    background-size: cover;
+    width: 200px;
+    height: 100px;
+    transform: rotate(-30deg);
+}
 
-
+main h3{
+    margin-top: 300px;
+}
 /* Buttons */
 .buttons{
     display: flex;
@@ -85,14 +94,12 @@ button{
     box-shadow: 0px 10px 20px #E9E9EA;
 }
 
-#crossBtn:hover,
-#crossBtn:focus{
+#crossBtn:hover{
     background-color: #FFE7EF;
     box-shadow: 0px 10px 20px #EDD9DF;
 }
 
-#heartBtn:hover,
-#heartBtn:focus{
+#heartBtn:hover{
     box-shadow: 0px 10px 20px #CCF1E6;
     background-color: #DBFFF4;
 }
