--- a/Personal Dashboard Chrome Extension/index.css
+++ b/Personal Dashboard Chrome Extension/index.css
@@ -11,7 +11,8 @@ body {
     background-size: cover;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
-    text-shadow: 0px 0px 20px #242424;
+    text-shadow: 3px 3px 20px rgb(84, 84, 84);
+    font-size: 1.25rem;
 }
 
 main {
@@ -27,8 +28,11 @@ div.top {
     justify-content: space-between;
 }
 
-h1.time {
+.time {
     text-align: center;
+    margin-top: -20em; 
+    width: 50%;
+    margin: -20em auto 0 auto;
 }
 
 div#crypto {
@@ -75,6 +79,70 @@ p.weather-temp {
     margin-left: -10px;
 }
 
-.links img{
-    width: 10px;
+
+/* Links */
+
+#addLinkBtn,
+#removeLinkBtn,
+.removeLink,
+#addFormBtn{
+    background: transparent;
+    color: inherit;
+    border: none;
+    font-size: 1.5rem;
+    cursor: pointer;
+    text-shadow: inherit;
+}
+
+.addLinkForm{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    position: absolute;
+    background-color: #242424;
+    height: 200px;
+    padding: 1em;
+    border-radius: 10px;
+}
+
+.displayNone{
+    display: none;
+}
+
+.addLinkForm input{
+    padding: 0.5em 0.25em;
+    text-align: center;
+    color: black;
+    border-radius: 5px;
+    border: none;
+}
+
+#allLinks{
+    text-align: left;
+}
+
+#allLinks a{
+    text-decoration: none;
+    cursor: pointer;
+    color: inherit;
+}
+
+.removeLink{
+    font-size: 1rem;
+    color: red;
+    padding: 0;
+    margin: 0;
+}
+
+.showNameClass{
+    background: transparent;
+    border: none;
+    border-bottom: 2px solid white;
+    color: inherit;
+    text-align: center;
+}
+
+.showNameClass:hover,
+.showNameClass:focus{
+    outline: none;
 }
