--- a/Travel-Journal(React)/Travel-Journal/src/index.css
+++ b/Travel-Journal(React)/Travel-Journal/src/index.css
@@ -1,1 +1,121 @@
+body{
+    margin: 0;
+    padding: 0;
+    background-color: rgb(50, 39, 39);
+    font-family: 'Inter', sans-serif;
+}
 
+*{
+    box-sizing: border-box;
+}
+
+p, h3{
+    padding: 0;
+    margin: 0;
+}
+
+.App{
+    margin: 0 auto;
+    width: 550px;
+    min-width: 400px;
+}
+
+.Header-Container{
+    background-color: #F55A5A;
+    height: 55px;
+    display: flex;
+    gap: 5px;
+    justify-content: center;
+    align-items: center;
+}
+
+.Header-Container p{
+    color: white;
+    font-weight: 500;
+    font-size: 14.4608px;
+    line-height: 18px;
+    letter-spacing: -0.075em;
+}
+
+.Header-Container i{
+    color: white;
+}
+
+.Main-Container{
+    margin: 0 auto;
+    background-color: #ffffff;
+    height: 93vh;
+    padding: 2em;
+}
+
+.card-container{
+    margin-bottom: 1em;
+    border-bottom: 1px solid #F5F5F5;
+    padding: 1em 0em;
+    display: flex;
+    gap: 10px;
+}
+
+.card-container img{
+    border-radius: 5px;
+    width: 125px;
+    height: 168px;
+    object-fit: cover;
+}
+
+.card-info{
+    padding: 1em;
+    width: 500px;
+}
+
+.card-map-info{
+    display: flex;
+    align-items: center;
+    gap: 3px;
+}
+
+.card-map-info p{
+    color: #2B283A;
+    font-weight: 400;
+    font-size: 10.24px;
+    line-height: 12px;
+    letter-spacing: 0.17em;
+}
+
+.card-map-info i{
+    font-size: 10px;
+    color: #F55A5A;
+}
+
+.card-map-info a{
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 10.24px;
+    line-height: 12px;
+    text-decoration-line: underline;
+    color: #918E9B;
+    margin-left: 10px;
+}
+
+.card-info h3{
+    font-weight: 700;
+    font-size: 25px;
+    line-height: 30px;
+    color: #2B283A;
+    margin: 3px 0 10px 0;
+}
+
+.card-dates p{
+    font-weight: 700;
+    font-size: 10.24px;
+    line-height: 12px;
+    color: #2B283A;
+}
+
+.card-description{
+    font-weight: 400;
+    font-size: 10.24px;
+    line-height: 150%;
+    color: #2B283A;
+}
